{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 137,
  "lineage": "84ac2a28-a458-e2a0-20dd-d34550f634bd",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-02-11T03:38:32.584-08:00",
            "deny": [],
            "description": "firewall for  vpc network - external connections",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/my-12345-project/global/firewalls/fw-allow-bastion",
            "log_config": [],
            "name": "fw-allow-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/networks/skosolapov-vpc",
            "priority": 1000,
            "project": "my-12345-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/firewalls/fw-allow-bastion",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-02-11T03:38:32.706-08:00",
            "deny": [],
            "description": "firewall for  vpc network - external connections",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/my-12345-project/global/firewalls/fw-allow-http",
            "log_config": [],
            "name": "fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/networks/skosolapov-vpc",
            "priority": 1000,
            "project": "my-12345-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/firewalls/fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-02-11T03:38:32.588-08:00",
            "deny": [],
            "description": "firewall for  vpc network - internal connections",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/my-12345-project/global/firewalls/fw-allow-internal",
            "log_config": [],
            "name": "fw-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/networks/skosolapov-vpc",
            "priority": 1000,
            "project": "my-12345-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/firewalls/fw-allow-internal",
            "source_ranges": [
              "10.13.1.0/24",
              "10.13.2.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20210122",
                    "size": 35,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/my-12345-project/zones/us-central1-c/disks/nginx-terraform"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/my-12345-project/zones/us-central1-c/instances/nginx-terraform",
            "instance_id": "5675833953836640681",
            "label_fingerprint": "WV9htIRKngU=",
            "labels": {
              "osfamily": "redhat",
              "servertype": "nginxserver",
              "wayofinstallation": "nginx-terraform"
            },
            "machine_type": "custom-1-4608",
            "metadata_fingerprint": "wmCeoHOYKfA=",
            "metadata_startup_script": "#!/bin/bash\n\nyum install -y nginx\nsudo systemctl enable nginx\nsudo systemctl start nginx\necho \"Hello from Sergey Kosolapov\" \u003e /usr/share/nginx/html/index.html\n",
            "name": "nginx-terraform",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.121.190.174",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/networks/skosolapov-vpc",
                "network_ip": "10.13.1.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/my-12345-project/regions/us-central1/subnetworks/public",
                "subnetwork_project": "my-12345-project"
              }
            ],
            "project": "my-12345-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/zones/us-central1-c/instances/nginx-terraform",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "6smc4R4d39I=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "vpc network",
            "id": "projects/my-12345-project/global/networks/skosolapov-vpc",
            "mtu": 0,
            "name": "skosolapov-vpc",
            "project": "my-12345-project",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/networks/skosolapov-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-02-11T03:38:33.336-08:00",
            "description": "private",
            "gateway_address": "10.13.2.1",
            "id": "projects/my-12345-project/regions/us-central1/subnetworks/private",
            "ip_cidr_range": "10.13.2.0/24",
            "name": "private",
            "network": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/networks/skosolapov-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "my-12345-project",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/regions/us-central1/subnetworks/private"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-02-11T03:38:32.758-08:00",
            "description": "public",
            "gateway_address": "10.13.1.1",
            "id": "projects/my-12345-project/regions/us-central1/subnetworks/public",
            "ip_cidr_range": "10.13.1.0/24",
            "name": "public",
            "network": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/networks/skosolapov-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "my-12345-project",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/regions/us-central1/subnetworks/public"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}